--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
 		"bootstrap": "^5.3.3",
 		"gapi-script": "^1.2.0",
 		"googleapis": "^144.0.0",
-		"gapi-script": "^1.2.0",
 		"prop-types": "^15.6.1",
 		"react": "^19.0.0",
+		"react-calendar": "^5.1.0",
 		"react-dom": "^19.0.0",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.29.0"
