--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ requests = "*"
 google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
 google-api-python-client = "*"
+google = "*"
 
 [requires]
 python_version = "3.10"
