--- a/package.json
+++ b/package.json
@@ -80,10 +80,12 @@
 		"bootstrap": "^5.3.3",
 		"gapi-script": "^1.2.0",
 		"googleapis": "^144.0.0",
+		"moment": "^2.30.1",
 		"prop-types": "^15.6.1",
-		"react": "^19.0.0",
+		"react": "^18.3.1",
+		"react-big-calendar": "^1.17.1",
 		"react-calendar": "^5.1.0",
-		"react-dom": "^19.0.0",
+		"react-dom": "^18.3.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^6.29.0"
 	}
